<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project %d repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download">Download</string>
    <string name="glide_library_desc">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_desc">"LoadApp - Current repository by Udacity "</string>
    <string name="retrofit_desc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="button_ok">OK</string>
    <string name="notification_channel_id">channelID</string>
    <string name="channel_name">File Download Status</string>
    <string name="select_file_to_download">Please select the file to download</string>
    <string name="failed">Failed</string>
</resources>
