<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageView_size"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/content_size"
                android:layout_height="@dimen/content_size"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/download"
                app:srcCompat="@drawable/ic_baseline_cloud_download_24" />
        </FrameLayout>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundColor="@color/colorPrimary"
            app:loadingBackgroundColor="@color/green"
            app:textColor="@color/white"
            app:loadingArchColor="@color/colorAccent"
            />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <RadioButton
                android:layout_weight="1"
                android:id="@+id/radioButtonGlide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/glide_library_desc" />

            <RadioButton
                android:id="@+id/radioButtonLoadApp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/load_app_desc" />

            <RadioButton
                android:id="@+id/radioButtonRetrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/retrofit_desc" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>